XMLExper/m12/m12_455_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1705:60: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLDocument*’ (conversion casts away constness)
 1705 |     while (/*PCI*/dynamic_cast<tinyxml2::XMLDocument*>(node)) {
      |                                                            ^
diff: tinyxml2.o: No such file or directory
